# gciSensors

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  CMakeLists_linux.cmake  format.sh  library.properties  load.sh  readme.md
arduino/src/: bmp3.hpp  gciSensors.hpp
cpp/: CMakeLists.txt  readme.md
cpp/examples/arduino/simple_accel_2/: simple_accel_2.ino
cpp/examples/arduino/simple_accel_ready/: simple_accel_ready.ino
cpp/examples/arduino/simple_press/: simple_press.ino
data/raw/: magcal.pkl
dev/i2c/: CMakeLists.txt  Wire.h  main.cpp
dev/i2c-accel/: CMakeLists.txt  main.cpp  sensor.hpp
dev/i2c-simple/: CMakeLists.txt  Wire.h  main.cpp  main2.cpp  main3.cpp
dev/old_mock/linux/: Arduino.h  Wire.cpp  Wire.h
dev/old_mock/mock/: CMakeLists.txt  mock.cpp
docs/: linux-i2c.md
docs/notebooks/: derive-quaternion-rotations.ipynb  quaternion-questions.ipynb
docs/notebooks/calibration/: datatypes.py  get_all_data.py  get_mag_data.py  mags.ipynb
docs/notebooks/calibration/arduino/simple_all/: simple_all.ino
docs/notebooks/quaternions/: derive-quaternion-rotations.ipynb  pyquat.py
examples/: CMakeLists.txt  accel.cpp  dummy.cpp  gps.cpp  mag.cpp  press.cpp  press_dps310.cpp  press_dsp310.cpp  simple_accel.cpp  simple_mag.cpp  simple_press.cpp
examples/arduino/simple_accel/: simple_accel.ino
examples/arduino/simple_filter/: rate.hpp  simple_filter.ino
examples/arduino/simple_mag/: simple_mag.ino
examples/arduino/simple_press/: simple_press.ino
examples/linux/: simple_accel.cpp  simple_mag.cpp  simple_press.cpp
examples/pico/: CMakeLists.txt  accel.cpp  mag.cpp  press.cpp
examples/simple_accel/: simple_accel.ino
examples/simple_accel_alt/: simple_accel.cpp
examples/simple_mag/: simple_mag.ino
examples/simple_press/: simple_press.ino
examples/simple_press_alt/: simple_press.cpp
gtests/: CMakeLists.txt  main-gtest.cpp
linux/: Arduino.cpp  Arduino.h  CMakeLists.txt  Wire.h  sensor.hpp
linux/examples/: CMakeLists.txt  accel.cpp  dummy.cpp  gps.cpp  mag.cpp  press_bmp390.cpp  press_dps310.cpp  scan_bus.cpp
linux/src/: bmp3.hpp  gciSensors.hpp  lsm6dsox.hpp
mock/: Arduino.h  Wire.h  mock.cpp
models/: readme.md
notebooks/calibration/: all.ipynb  allcal.pkl  magPlot.py
notebooks/calibration/arduino/simple_all/: rate.hpp
notebooks/calibration/arduino/simple_mag/: simple_mag.ino
pico/: CMakeLists.txt  readme.md  sensor.hpp
pico/examples/: CMakeLists.txt  accel-bf.cpp  accel.cpp  gps.cpp  imu.cpp  lps22_spi.cpp  mag.cpp  press_bmp390.cpp  press_dps310.cpp  scan_bus.cpp  two_wire.hpp
pico/src/: dps310.hpp  lis3mdl.hpp  lsm6dsox.hpp  pa1010d.hpp
ros2/: CMakeLists.txt  package.xml  readme.md  sensor.hpp
ros2/examples/: accel.cpp
ros2/src/: main.cpp
src/: algorithms.hpp  bmp3.hpp  bmp3.hxx  bmp390.hpp  common.hpp  dps310.hpp  earth.hpp  filters.hpp  gciSensors.hpp  gps.hpp  lis3mdl.hpp  lis3mdl.hxx  lps22hb.hpp  lsm6dsox.hpp  lsm6dsox.hxx  pa1010d.hpp  pmtk.hpp  sensor.cpp  sensor.hpp  sensor_apple.cpp  sensor_apple.hpp  sensor_arduino.cpp  sensor_arduino.hpp  sensor_dummy.hpp  sensor_linux.cpp  sensor_linux.hpp  sensor_linux_i2c.hpp  sensor_linux_spi.hpp  sensor_pico.hpp  sensor_pico_i2c.hpp  sensor_pico_spi.hpp  timers.hpp  units.hpp
src/bmp390/: bmp3.cpp  bmp3.hpp
src/bmp390/bosch/: bmp3.h  bmp3_defs.h  bmp3imp.cpp
src/common/: algorithms.hpp  compfilter.hpp  hertz.hpp  kf1d.hpp  messages.hpp  quaternions.hpp  tiltcompass.hpp  time.hpp  vectors.hpp
src/lis3mdl/: lis3mdl.cpp  lis3mdl.hpp
src/lsm6dsox/: lsm6dsox.cpp  lsm6dsox.hpp
src/sensor/: sensor.hpp  sensor_pico.hpp
src/spi/: lps22hb.hpp  sensor_spi_pico.hpp
src/tfmini/: tfmini.h
